# python-template

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
tests/: test_main.py
