[project]
name = "python-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
packages = [{ include = "python_project", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.2"
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
